// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can get schema 1`] = `
Array [
  Object {
    "config": Object {
      "description": "mock table",
      "schema": Object {
        "fields": Array [
          Object {
            "name": "property_store_hello",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "type": "DAY",
      },
    },
    "name": "embark_track",
    "rows": Array [],
  },
]
`;

exports[`can get schema 2`] = `
Object {
  "description": "mock table",
  "schema": Object {
    "fields": Array [
      Object {
        "name": "property_store_hello",
        "type": "STRING",
      },
    ],
  },
  "timePartitioning": Object {
    "expirationMS": "7776000000",
    "type": "DAY",
  },
}
`;
